# price-discovery

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile.fastapi  Dockerfile.streamlit  GETTINGHELP.md  Makefile  Qdrant_vector_DB_creation.ipynb  README.md  docker-compose.yml  fastapi_app.py  pyproject.toml  streamlit_app.py
clip_notebooks/: Open_clip.ipynb  Product_Discovery-CLIP-vit-base-patch32.ipynb  Product_Discovery_Using_CLIP.ipynb  price_discovery_CLIP-vit_large-stylish products.ipynb
configs/: __init__.py  config.yaml
data_preparation_notebooks/: amazon_product_scraper.ipynb  get_apparel_data.ipynb
notebooks/agents_notebooks/: agents.ipynb
notebooks/agents_notebooks/evaluation_notebooks/: agent_with_logging.ipynb  evaluation_metrics.ipynb
notion-documentation/: Price Discovery Product a9051f98336d4a3a8696abff8bc41555.md
rag_notebooks/: RAG - Part 2.ipynb  RAG-Complete-Open-clip-vit-b-32-chroma.ipynb  RAG.ipynb  rag_mixtral.ipynb
src/: agents.py  db.py  prompts.py  tools.py  utils.py
