[tool.poetry]
name = "test-price-discovery"
version = "0.1.0"
description = ""
authors = ["KimaniKibuthu <32309808+KimaniKibuthu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
langchain-core = ">=0.1.24,<0.2"
requests = "^2"
PyYAML = ">=5.3"
numpy = "^1"
aiohttp = "^3.8.3"
tenacity = "^8.1.0"
dataclasses-json = ">= 0.5.7, < 0.7"
langsmith = "^0.1.0"
tqdm = ">=4.48.0"
openapi-pydantic = "^0.3.2"
beautifulsoup4 = "^4"
jinja2 = "^3"
pypdf = "^3.4.0"
pdfminer-six = "^20221105"
lxml = "^4.9.2"
pymupdf = "^1.22.3"
pypdfium2 = "^4.10.0"
pandas = "^2.0.1"
chardet = "^5.1.0"
requests-toolbelt = "^1.0.0"
scikit-learn = "^1.2.2"
jsonschema = ">1"
datasets = "^2.15.0"
httpx = "^0.24.1"
pydantic = "^1.9.0"
langchain = "^0.1.8"
ipykernel = "^6.29.2"
torchvision = "^0.17.0"
ftfy = "^6.1.3"
regex = "^2023.12.25"
langchain-experimental = "^0.0.52"
clip = {git = "https://github.com/openai/CLIP.git"}
jupyter = "^1.0.0"
open-clip-torch = "^2.24.0"
torch = "^2.2.0"
transformers = "^4.37.2"
unstructured = {extras = ["all-docs"], version = "^0.12.4"}
pdf2image = "^1.17.0"
chromadb = "^0.4.22"
qdrant-client = "^1.7.3"
langchainhub = "^0.1.14"
google-generativeai = "^0.3.2"
langchain-google-genai = "^0.0.9"
google-api-python-client = "^2.118.0"
google-search-results = "^2.4.2"
langchain-fireworks = "^0.1.1"
huggingface-hub = "^0.21.3"
langgraph = "^0.0.26"
pyowm = "^3.3.0"
pre-commit = "^3.6.2"
sentence-transformers = "^2.5.1"
evaluate = "^0.4.1"
rouge-score = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
